[tool.poetry]
name = "dark_labs"
version = "0.1.0"
description = ""
authors = ["Vikas Z <Vikas Z <vikas.zingade@skillate.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
django-environ = "^0.4.5"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
